--- a/About.html
+++ b/About.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About GSF Bandit 600</title>
+    <title>About Owner</title>
    
     <meta 
     name="description"
@@ -11,43 +11,14 @@
 <body>
 
     <ul>
-        <li><a href="Bandit_Home.html"> Home</a></li>
+        <li><a href="Index.html"> Home</a></li>
     </ul>
 
-    <h1 style="text-align: center">
-        Technical information on this model
-    </h1>
-    
-<table border="1" width="100%">
-    <tr>
-        <th colspan="2" >Suzuki Bandit GSF 600</th>
-    </tr>
-    <tr>
-        <td>Model</td>
-        <td>Suzuki GSF Bandit 600 Y</td>
-    </tr>
-    <tr>
-        <td>Horsepower</td>
-        <td>77hp at 10500rpm</td>
-    </tr>
-    <tr>
-        <td>Torque</td>
-        <td>54Nm at 10500rpm</td>
-    </tr>
-    <tr>
-        <td>Engine size</td>
-        <td>599CC</td>
-    </tr>
-    <tr>
-        <td>Dry weight (kg)</td>
-        <td>196</td>
-    </tr>
-    <tr>
-        <td>Top speed</td>
-        <td>130 mph</td>
-    </tr>
+    <h1 style="text-align: center"> Contact information</h1>
 
-</table>
+    <p> If you are interested in the motorbike, and would like to set up a viewing and/or purchase. Then feel free to contact me on the details below! </p>
+
+    <p> Email: <a href="mailto:nabilahmed.bu@gmail.com">nabilahmed.bu@gmail.com</a></p>
 
 </body>
 </html>
