--- a/Index.html
+++ b/Index.html
@@ -18,7 +18,7 @@
 <body>
 
 <ul>
-<li><a href="About_bandit.html"
+<li><a href="About.html"
         title="If you are interested in the bike, this is the best way to get a hold of me!"> About/Contact information</a></li>
 </ul>
 
@@ -48,6 +48,41 @@
         <li>Bulletproof engine reliabillty</li>
         <li>Classic 2000's era japanese bike</li>
     </ul>
+
+    <h1 style="text-align: center">
+        Technical information on this model
+    </h1>
+
+    <table border="1" width="100%">
+        <tr>
+            <th colspan="2" >Suzuki Bandit GSF 600</th>
+        </tr>
+        <tr>
+            <td>Model</td>
+            <td>Suzuki GSF Bandit 600 Y</td>
+        </tr>
+        <tr>
+            <td>Horsepower</td>
+            <td>77hp at 10500rpm</td>
+        </tr>
+        <tr>
+            <td>Torque</td>
+            <td>54Nm at 10500rpm</td>
+        </tr>
+        <tr>
+            <td>Engine size</td>
+            <td>599CC</td>
+        </tr>
+        <tr>
+            <td>Dry weight (kg)</td>
+            <td>196</td>
+        </tr>
+        <tr>
+            <td>Top speed</td>
+            <td>130 mph</td>
+        </tr>
+    
+    </table>
 
     <p>Current images of the bike:</p>
 
